--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootswatch: Paper</title>
+    <title>Resume of faisal ahmed - Freelance software developer - Bangladesh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap.css" media="screen">
     <link rel="stylesheet" href="bootswatch.min.css">
@@ -16,7 +16,17 @@
     </script>
   </head>
   <body>
-
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-8 col-md-7 col-sm-12">
+				<h3>Background:</h3>
+				<p>I am a freelance software developer from Bangladesh.</p>
+			</div>
+			<div class="col-lg-4 col-md-5">
+				<h3>Bangladesh:</h3>
+			</div>
+		</div>
+	</div>
     <script src="jquery-1.10.2.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootswatch.js"></script>
