--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Resume of faisal ahmed - Freelance software developer - Bangladesh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bootstrap.css" media="screen">
+    <link rel="stylesheet" href="bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="bootswatch.min.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
