--- a/index.html
+++ b/index.html
@@ -21,9 +21,16 @@
 			<div class="col-lg-8 col-md-7 col-sm-12">
 				<h3>Background:</h3>
 				<p>I am a freelance software developer from Bangladesh.</p>
+				<h3>Projects:</h3>
+				<p></p>
+				<h3>Contributions:</h3>
+				<p></p>
 			</div>
 			<div class="col-lg-4 col-md-5">
-				<h3>Bangladesh:</h3>
+				<h3>Contact:</h3>
+				<ul>
+					<li><b>email:</b>thephpx(at)gmail(dot)com</li>
+				</ul>
 			</div>
 		</div>
 	</div>
