--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Resume of faisal ahmed - Freelance software developer - Bangladesh</title>
+    <title>Faisal Ahmed - Software Developer - Bangladesh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="bootswatch.min.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -17,23 +18,171 @@
   </head>
   <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 col-md-7 col-sm-12">
-				<h3>Background:</h3>
-				<p>I am a freelance software developer from Bangladesh.</p>
-				<h3>Projects:</h3>
-				<p></p>
-				<h3>Contributions:</h3>
-				<p></p>
-			</div>
-			<div class="col-lg-4 col-md-5">
-				<h3>Contact:</h3>
-				<ul>
-					<li><b>email:</b>thephpx(at)gmail(dot)com</li>
-				</ul>
-			</div>
-		</div>
-	</div>
+    <div class="row">
+      <div class="col-lg-12">
+        <h1>Faisal Ahmed</h1>
+        <p>I am a self-taught full-stack software developer from Dhaka, Bangladesh. Currently I am working for a florida based off-short web development company as a senior software engineer. I have a masters in business administration and my primary focus is to build customized web applications. Currently I develop in LAMP stack but looking forward to branch out to MEAN stack. My current interest of experiments includes nodejs, angularJS and expressJS.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Expericence</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">MVI Solutions Limited</h6>
+          <p>Currently I am working at MVI as a senior software engineer.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Korea MTS Limited</h6>
+          <p>.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Implode Impressions Limited</h6>
+          <p>.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Right Brain Solutions Limited</h6>
+          <p>.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Contributions</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">OpenCart&nbsp;<span class="label label-default">OpenCart</span></h6>
+          <p>...</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Wordpress DB Migration Script&nbsp;-&nbsp;<span class="label label-default">WordPress</span></h6>
+          <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Wordpress Gravity Form Importer&nbsp;-&nbsp;<span class="label label-default">WordPress</span></h6>
+          <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Transaction Services Payment Gateway API Wrapper&nbsp;-&nbsp;<span class="label label-default">PHP</span></h6>
+          <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Kakao API Wrapper Library&nbsp;-&nbsp;<a href="https://github.com/thephpx/kakaoapiwrapper"><span class="label label-default">PHP</span></a></h6>
+          <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Experiments</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Appointment Booking System With Standalone Server</h6>
+          <p>Built with Raspberry Pi on LAMP stack.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Skill-Set</h4>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Frontend</h6>
+          <p><span class="label label-default">HTML</span>&nbsp;<span class="label label-default">jQuery</span>&nbsp;<span class="label label-default">CSS</span>&nbsp;<span class="label label-default">Bootstrap</span>&nbsp;<span class="label label-default">960gs</span>
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Scripting</h6>
+          <p><span class="label label-default">PHP</span>&nbsp;<span class="label label-default">JavaScript</span>&nbsp;<span class="label label-default">Python</span>&nbsp;<span class="label label-default">Bash</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">DBMS</h6>
+          <p><span class="label label-default">MySQL</span>&nbsp;<span class="label label-default">MongoDB</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-lg-offset-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">VCS</h6>
+          <p><span class="label label-default">GIT</span>&nbsp;<span class="label label-default">Subversion</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Build Automation</h6>
+          <p><span class="label label-default">Jenkins</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Frameworks &amp; CMS</h6>
+          <p><span class="label label-default">Codeigniter</span>&nbsp;<span class="label label-default">Laravel</span>&nbsp;<span class="label label-default">Wordpress</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-lg-offset-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">E-Commerce</h6>
+          <p><span class="label label-default">Magento</span>&nbsp;<span class="label label-default">OpenCart</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Testing&nbsp;&&nbsp;Debugging</h6>
+          <p><span class="label label-default">Codeception</span>&nbsp;<span class="label label-default">Xdebug</span></p>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="experience" style="padding-top:10px;">
+          <h6 class="bold">Others</h6>
+          <p><span class="label label-default">MySQL Workbench</span>&nbsp;<span class="label label-default">Putty</span>&nbsp;<span class="label label-default">Filezilla</span></p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Certifications</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="academics" style="padding-top:10px;">
+          <h6 class="bold">Zend PHP Certified</h6>
+          <p>...</p>
+        </div>
+        <div class="academics" style="padding-top:10px;">
+          <h6 class="bold">Certified SCRUM Master</h6>
+          <p>...</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Academics</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="academics" style="padding-top:10px;">
+          <h6 class="bold">Masters in Business Administation</h6>
+          <p>BRAC University, Dhaka, Bangladesh.</p>
+        </div>
+        <div class="academics" style="padding-top:10px;">
+          <h6 class="bold">Bachelor of Business Administration</h6>
+          <p>BRAC University, Dhaka, Bangladesh.</p>
+        </div>
+      </div>
+    </div>
+
     <script src="jquery-1.10.2.min.js"></script>
     <script src="bootstrap.min.js"></script>
     <script src="bootswatch.js"></script>
