--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
       </div>
       <div class="col-lg-9">
         <div class="academics" style="padding-top:10px;">
-          <h6 class="bold">Zend PHP Certified</h6>
-          <p>...</p>
+          <h6 class="bold">Certified SCRUM Master</h6>
+          <p>Nov 2016 - Nov 2018</p>
+	  <p><a href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
         </div>
         <div class="academics" style="padding-top:10px;">
-          <h6 class="bold">Certified SCRUM Master</h6>
+          <h6 class="bold">Zend PHP Certified</h6>
           <p>...</p>
         </div>
       </div>
