non applicable portion removal
non applicable portion removal

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <h6 class="bold">Certified SCRUM Master</h6>
           <p>Nov 2016 - Nov 2018 : <a href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
         </div>
-        <div class="academics" style="padding-top:10px;">
+        <div class="academics" style="padding-top:10px;display:none;">
           <h6 class="bold">Zend PHP Certified</h6>
           <p>...</p>
         </div>
