mvi solutions job descriptions
mvi solutions job descriptions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
     <div class="row">
       <div class="col-lg-12">
         <h1>Faisal Ahmed</h1>
-        <p>I am a self-taught full-stack software developer from Dhaka, Bangladesh. Currently I am working for a florida based off-short web development company as a senior software engineer. I have a masters in business administration and my primary focus is to build customized web applications. Currently I develop in LAMP stack but looking forward to branch out to MEAN stack. My current interest of experiments includes nodejs, angularJS and expressJS.</p>
+        <p>
+	I am a self-taught full-stack software developer from Dhaka, Bangladesh. 
+	Currently I am working for a florida based off-short web development company as a senior software engineer. 
+	I have a masters in business administration and my primary focus is to build customized web applications. 
+	I development stack is based on LAMP but looking forward to branch out to MEAN stack as well. 
+	</p>
       </div>
     </div>
 
@@ -32,7 +37,12 @@
       <div class="col-lg-9">
         <div class="experience" style="padding-top:10px;">
           <h6 class="bold">MVI Solutions Limited</h6>
-          <p>Currently I am working at MVI as a senior software engineer.</p>
+	  <h4 class="bold">Senior Software Engineer</h4>
+          <p>
+		I am responsible for developing customized web applications as well as maintain legacy softwares of our existing
+		clients. My work involves development in Laravel, CodeIgniter, Wordpress &amp; Woocommerce as well as maintain software
+		written in raw php and older platforms such as oscommerce.
+	  </p>
         </div>
         <div class="experience" style="padding-top:10px;">
           <h6 class="bold">Korea MTS Limited</h6>
