--- a/index.html
+++ b/index.html
@@ -40,16 +40,21 @@
 	  <h6 class="bold">Senior Software Engineer</h6>
           <p>
 		I am responsible for developing customized web applications as well as maintain legacy softwares of our existing
-		clients. My work involves development in Laravel, CodeIgniter, Wordpress &amp; Woocommerce as well as maintain software
+		clients. My work involves development in Laravel, CodeIgniter, Wordpress &amp; WooCommerce as well as to maintain software
 		written in raw php and older platforms such as oscommerce.
 	  </p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Korea MTS Limited</h6>
-          <p>.</p>
+          <h5 class="bold">Korea MTS Limited</h5>
+	  <h6 class="bold">Senior Software Engineer</h6>
+          <p>
+		  At koera MTS limited I was tasked with developing a customized customer relationship management (CRM) system for our clients located at South Korea. 
+		  I implemented the beta version of the software in codeigniter framework and also had to do the database design and entity-relations from the groun up.
+ 	  </p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Implode Impressions Limited</h6>
+          <h5 class="bold">Implode Impressions Limited</h5>
+	  <h6 class="bold">Senior Software Engineer</h6>
           <p>.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
