--- a/index.html
+++ b/index.html
@@ -111,8 +111,15 @@
       <div class="col-lg-3">
         <div class="experience" style="padding-top:10px;">
           <h6 class="bold">Frontend</h6>
-          <p><span class="label label-default">HTML</span>&nbsp;<span class="label label-default">jQuery</span>&nbsp;<span class="label label-default">CSS</span>&nbsp;<span class="label label-default">Bootstrap</span>&nbsp;<span class="label label-default">960gs</span>
-          </p>
+		<p>
+		  <span class="label label-default">HTML</span>&nbsp;
+		</p>
+		<p>
+		  <span class="label label-default">jQuery</span>&nbsp;
+		  <span class="label label-default">CSS</span>&nbsp;
+		  <span class="label label-default">Bootstrap</span>&nbsp;
+		  <span class="label label-default">960gs</span>
+		</p>
         </div>
       </div>
       <div class="col-lg-3">
