--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Faisal Ahmed - Software Developer - Bangladesh</title>
+    <title>Faisal Ahmed - Software Developer - Bangladesh</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex,nofollow">
     <link rel="stylesheet" href="bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="bootswatch.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -21,12 +22,24 @@
     <div class="row">
       <div class="col-lg-12">
         <h1>Faisal Ahmed</h1>
-        <p>
-	I am a self-taught full-stack software developer from Dhaka, Bangladesh. 
-	Currently I am working for a florida based off-short web development company as a senior software engineer. 
-	I have a masters in business administration and my primary focus is to build customized web applications. 
-	I development stack is based on LAMP but looking forward to branch out to MEAN stack as well. 
-	</p>
+          <p>
+            I am a self-taught full-stack software developer from Dhaka, Bangladesh. 
+            Currently I am working for a florida based off-short web development company as a senior software engineer. 
+            I have a masters in business administration and my primary focus is to build customized web applications. 
+            I development stack is based on LAMP but looking forward to branch out to MEAN stack as well. 
+          </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3">
+        <h4>Recent Works</h4>
+      </div>
+      <div class="col-lg-9">
+        <div class="experience" style="padding-top:10px;">
+          <h5 class="bold">MVI Solutions Limited</h5>
+          <h6 class="bold">Senior Software Engineer</h6>
+          <p></p>
+        </div>
       </div>
     </div>
 
@@ -37,29 +50,29 @@
       <div class="col-lg-9">
         <div class="experience" style="padding-top:10px;">
           <h5 class="bold">MVI Solutions Limited</h5>
-	  <h6 class="bold">Senior Software Engineer</h6>
+          <h6 class="bold">Senior Software Engineer</h6>
           <p>
-		I am responsible for developing customized web applications as well as maintain legacy softwares of our existing
-		clients. My work involves development in Laravel, CodeIgniter, Wordpress &amp; WooCommerce as well as to maintain software
-		written in raw php and older platforms such as oscommerce.
-	  </p>
+            I am responsible for developing customized web applications as well as maintain legacy softwares of our existing
+            clients. My work involves development in Laravel, CodeIgniter, Wordpress &amp; WooCommerce as well as to maintain software
+            written in raw php and older platforms such as oscommerce.
+          </p>
         </div>
         <div class="experience" style="padding-top:10px;">
           <h5 class="bold">Korea MTS Limited</h5>
-	  <h6 class="bold">Senior Software Engineer</h6>
+          <h6 class="bold">Senior Software Engineer</h6>
           <p>
-		  At koera MTS limited I was tasked with developing a customized customer relationship management (CRM) system for our clients located at South Korea. 
-		  I implemented the beta version of the software in codeigniter framework and also had to do the database design and entity-relations from the groun up.
- 	  </p>
+            At koera MTS limited I was tasked with developing a customized customer relationship management (CRM) system for our clients located at South Korea. 
+            I implemented the beta version of the software in codeigniter framework and also had to do the database design and entity-relations from the groun up.
+          </p>
         </div>
         <div class="experience" style="padding-top:10px;">
           <h5 class="bold">Implode Impressions Limited</h5>
-	  <h6 class="bold">Senior Software Engineer</h6>
-          <p>.</p>
+          <h6 class="bold">Senior Software Engineer</h6>
+          <p>At implode impressions I was involved in customized web applications development. I developed customized solutions like prospect and asset management systems as well as unique solutions such as tracer management system for organizations like save the children bangladesh.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
           <h6 class="bold">Right Brain Solutions Limited</h6>
-          <p>.</p>
+          <p>At Right Brain Solutions I was working as a project manager. During my stay at right brain solution I was invloved in managing customized web application based projects for its client using SCRUM methodology.</p>
         </div>
       </div>
     </div>
@@ -69,24 +82,24 @@
         <h4>Contributions</h4>
       </div>
       <div class="col-lg-9">
-        <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">OpenCart&nbsp;<span class="label label-default">OpenCart</span></h6>
-          <p>...</p>
+        <div class="experience" style="padding-top:10px;display:none">
+          <h6 class="bold">OpenCart</h6>
+          <p>I have small contribution in opencart project by the means of issue resolution of their bug.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Wordpress DB Migration Script&nbsp;-&nbsp;<span class="label label-default">WordPress</span></h6>
+          <h6 class="bold">Wordpress DB Migration Script&nbsp;-&nbsp;<a class="btn btn-xs btn-primary" href="https://github.com/thephpx/wpdbmigration">Link</a></h6>
           <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Wordpress Gravity Form Importer&nbsp;-&nbsp;<span class="label label-default">WordPress</span></h6>
+          <h6 class="bold">Wordpress Gravity Form Importer&nbsp;-&nbsp;<a class="btn btn-xs btn-primary" href="https://github.com/thephpx/wp-gravity-form-importer">Link</a></h6>
           <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Transaction Services Payment Gateway API Wrapper&nbsp;-&nbsp;<span class="label label-default">PHP</span></h6>
+          <h6 class="bold">Transaction Services Payment Gateway API Wrapper&nbsp;-&nbsp;<a class="btn btn-xs btn-primary" href="https://github.com/thephpx/transx">Link</a></h6>
           <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Kakao API Wrapper Library&nbsp;-&nbsp;<a href="https://github.com/thephpx/kakaoapiwrapper"><span class="label label-default">PHP</span></a></h6>
+          <h6 class="bold">Kakao API Wrapper Library&nbsp;-&nbsp;<a class="btn btn-xs btn-primary" href="https://github.com/thephpx/kakaoapiwrapper">Link</a></h6>
           <p>Simple PHP script to help migrate wordpress sites from one domain to another. Basic functionality of the script is to replace the domain name and abosolute path of from an existing database sql dump to a another domain name and absolute path.</p>
         </div>
       </div>
@@ -141,7 +154,7 @@
       <div class="col-lg-3">
         <div class="experience" style="padding-top:10px;">
           <h6 class="bold">Build Automation</h6>
-          <p><span class="label label-default">Jenkins</span></p>
+          <p><span class="label label-default">Jenkins</span>&nbsp;<span class="label label-default">Travis</span></p>
         </div>
       </div>
       <div class="col-lg-3">
