--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
           <p>At implode impressions I was involved in customized web applications development. I developed customized solutions like prospect and asset management systems as well as unique solutions such as tracer management system for organizations like save the children bangladesh.</p>
         </div>
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Right Brain Solutions Limited</h6>
+          <h5 class="bold">Right Brain Solutions Limited</h5>
+          <h6 class="bold">Project Manager</h6>
           <p>At Right Brain Solutions I was working as a project manager. During my stay at right brain solution I was invloved in managing customized web application based projects for its client using SCRUM methodology.</p>
         </div>
       </div>
