--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="col-lg-9">
         <div class="academics" style="padding-top:10px;">
           <h6 class="bold">Certified SCRUM Master</h6>
-          <p>Nov 2016 - Nov 2018 : <a href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
+          <p>Certificate # 589815 : <a href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
         </div>
         <div class="academics" style="padding-top:10px;display:none;">
           <h6 class="bold">Zend PHP Certified</h6>
