--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </div>
       <div class="col-lg-3">
         <div class="experience" style="padding-top:10px;">
-          <h6 class="bold">Testing&nbsp;&&nbsp;Debugging</h6>
+          <h6 class="bold">Testing&nbsp;&amp;&nbsp;Debugging</h6>
           <p><span class="label label-default">Codeception</span>&nbsp;<span class="label label-default">Xdebug</span></p>
         </div>
       </div>
@@ -192,7 +192,7 @@
       <div class="col-lg-9">
         <div class="academics" style="padding-top:10px;">
           <h6 class="bold">Certified SCRUM Master</h6>
-          <p>Certificate # 589815 : <a href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
+          <p>Certificate # 589815 : <a class="btn btn-xs btn-primary" href="https://www.scrumalliance.org/community/profile/fahmed21">Link</a></p>
         </div>
         <div class="academics" style="padding-top:10px;display:none;">
           <h6 class="bold">Zend PHP Certified</h6>
