--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
       </div>
       <div class="col-lg-9">
         <div class="experience" style="padding-top:10px;">
-          <h5 class="bold">MVI Solutions Limited</h5>
-          <h6 class="bold">Senior Software Engineer</h6>
-          <p></p>
+          <h5 class="bold">E-Commerce Website - <span class="label label-xs label-info">Covered by NDA</span></h5>
+          <h6 class="bold">Custom Programming, Custom Theme Development</h6>
+          <p>Converted an e-commerce website handling 1.3M requests per month from raw php to WooCommerce keeping the look and feel similar. Work included custom theme development, customized restriction on category specific products.</p>
+        </div>
+        <div class="experience" style="padding-top:10px;">
+          <h5 class="bold">Customized Shared Database for Social Service Providers - <span class="label label-xs label-info">Covered by NDA</span></h5>
+          <h6 class="bold">Custom Programming, Database Schema Design</h6>
+          <p>Was tasked with converting an idea into a working project which gave various social service providers a common platform to share and collaborate as well as to provider services to their users. Mentionable features includes signature storage and place on pdf, Custom form builder and data collection.</p>
         </div>
       </div>
     </div>
